--- a/styles.css
+++ b/styles.css
@@ -1,87 +1,111 @@
 body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    margin: 0;
-    background: linear-gradient(135deg, #FC2503, #fb6806, #0e72ed, #0338AE);
-    font-size: 16px; 
-  }
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  margin: 0;
+  background: linear-gradient(135deg, #FC2503, #fb6806, #0e72ed, #0338AE);
+  font-size: 16px; 
+}
 
-  .container {
-    background-color: rgba(210, 196, 196, 0.5);
-    width: 28em;
-    height: 22em;
-    border-radius: 1.25em;
-    text-align: center;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-  }
-  .circle {
-    position: absolute;
-    top: 9em;
-    left: 50%;
-    transform: translateX(-50%);
-    width: 8em;
-    height: 8em;
-    background-color: #ccc;
-    border-radius: 50%;
-    overflow: hidden;
-  }
-  
-  .circle img {
-    width: 100%;
-    height: 100%;
-  }
-  
-  h2 {
-    color: white;
-    font-family: 'Inter-Bold';
-    margin-top: 4em;
-    line-height: 1.5;
-  }
-  
-  p {
-    color: white;
-    font-family: 'Inter-Bold';
-    line-height: 1.5;
-    position: relative;
-    top: 15px;
-  }
-  
+.container {
+  background-color: rgba(210, 196, 196, 0.5);
+  width: 25em;
+  height: 30em;
+  border-radius: 1.25em;
+  text-align: center;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  position: relative;
+}
 
-  input {
-    color: white;
-    border-radius: 10px;
-    border: 1.5px solid white;
-    padding: 10px;
-    font-family: 'Inter-Regular';
-    width: 20em;
-    background-color: transparent;
-    margin-top: 20px;
-    text-align: center;
-  }
-  
-  button {
-    margin-top: 20px;
-    font-family: 'Inter-Bold';
-    border-color: transparent;
-    padding: 10px;
-    border-radius: 10px;
-    width: 7em;
-    background-color:#fb6806;
-    color: white;
-    cursor: pointer;
-    box-shadow: 0 4px 9px rgba(0, 0, 0, 0.2);
+.circle {
+  position: absolute;
+  top: 1.5em;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 8em;
+  height: 8em;
+  background-color: #ccc;
+  border-radius: 50%;
+  overflow: hidden;
+}
 
-    transition: background-color 0.3s;
-  }
-  
-  button:hover {
-    background-color: rgba(22, 223, 79, 0.76);
+.circle img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
 
-  }
+h2 {
+  position: relative;
+  top: 2.5em;
+  color: white;
+  font-family: 'Inter-Bold';
+  margin-top: 4em;
+  line-height: 1.5;
+}
 
-  .container {
-    padding: 15 px;
-  }
-    
+p {
+  position: relative;
+  top: 4em;
+  color: white;
+  font-family: 'Inter-Bold';
+  line-height: 1.5;
+}
+
+input {
+  position: relative;
+  top: 6em;
+  color: white;
+  border-radius: 10px;
+  border: 2px dotted white;
+  padding: 10px;
+  font-family: 'Inter-Regular';
+  width: 20em;
+  background-color: transparent;
+  text-align: center;
+}
+
+button {
+  position: relative;
+  top: 7em;
+  font-family: 'Inter-Bold';
+  border-color: transparent;
+  padding: 10px;
+  border-radius: 10px;
+  width: 7em;
+  background-color: #fb6806;
+  color: white;
+  cursor: pointer;
+  box-shadow: 0 4px 9px rgba(0, 0, 0, 0.2);
+  transition: background-color 0.3s;
+}
+
+button:hover {
+  background-color: rgba(22, 223, 79, 0.76);
+}
+
+.logos {
+  flex-direction: row-reverse;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 30px;
+  position: relative;
+  top: 8em;
+}
+
+.logoprobex {
+  width: 4em;
+  height: 5em;
+}
+
+.logos img:not(.logoprobex) {
+  width: 3em;
+  height: 4em;
+}
+
+.container {
+  padding: 15px; 
+}
+
